--- a/index.html
+++ b/index.html
@@ -60,9 +60,35 @@
 <head>
     <meta charset="UTF-8">
     <title>“The World’s Favourite Scent Is Vanilla”</title>
+ <style>
+      body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+      section {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+      .argument {
+        width: 45%;
+        margin: 20px;
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 10px;
+      }
+      img {
+        max-width: 100%;
+        height: auto;
+        border-radius: 10px;
+      }
+    </style>
 </head>
 <body>
 <section>
+  <div class="argument">
     <h1>Vanilla ice cream </h1>
     <img src="images/Vanilla-icecream.jpg" alt="vanilla ice cream image"></img>
 
@@ -94,7 +120,7 @@
       have used it to calm patients experiencing high levels of anxiety prior to a test or procedure. The calming aromatics of the scent have also been used to help people who suffer from generalized anxiety disorder. The fact that Vanilla has the propensity to induce such calm in people is a big factor that contributes to its overall appeal. 
         </p>
 </section>
-
+</div>
 </body>
 </html>
  main
